# global-horizon-bank-dwh-project

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  packages.txt  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  docker-publish.yml
dashboard/: app.py  app_executive.py
data/raw/: accounts.csv  branches.csv  customers.csv  employees.csv  loans.csv
diagrams/: cicd_pipeline.md  dashboard_navigation.md  enterprise_architecture.md  medallion_flow.md  olap_erd.drawio  oltp_erd.drawio  security_model.md  star_schema.md
docs/: architecture.md  business_case.md  data_dictionary.md  deployment_guide.md  erd_preview.md  interview_questions.md  kpi_catalog.md  phases.md  roadmap.md  runbook.md  security_framework.md  sql_implementation_guide.md  streamlit_dashboard_guide.md  validation_report.md
sql/analytics/: 01_fraud_detection.sql  02_churn_cohort.sql  03_customer_lifetime_value.sql  04_branch_benchmarking.sql  05_anomaly_detection.sql
sql/etl/: 01_etl_procedures.sql  02_etl_orchestration.sql
sql/olap/: 01_ddl_star_schema.sql  02_advanced_modeling.sql  03_indexing_partitioning.sql  04_analytical_queries.sql  05_advanced_modeling_pro.sql  06_views_semantic_layer.sql
src/: __init__.py  config.py  convert_svg.py  data_generation.py  data_quality.py  logger.py  pipeline_generator.py  retry.py  run_sql_pipeline.py  setup_sqlserver.py  validation.py
src/etl/: base.py  (+4 more)
tests/: test_config.py  test_data_quality.py  test_etl.py  test_etl_pipeline.py  test_ml_features.py  test_retry.py  test_validation.py
(+14 files in other folders)
