[project]
name = "global-horizon-bank-dwh"
version = "1.0.0"
description = "Global Horizon Bank — Enterprise Data Warehouse Platform (Harvard Edition)"
requires-python = ">=3.10"
readme = "README.md"
license = { file = "LICENSE" }

[tool.ruff]
line-length = 110
target-version = "py310"
exclude = ["data", "logs", "diagrams"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "C4"]
ignore = ["E501"]  # line length handled by formatter

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011", "F401"]
"dashboard/*" = ["E402"]
"src/data_generation.py" = ["B007"]
"src/etl/base.py" = ["SIM105"]
"src/pipeline_generator.py" = ["SIM105"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_unused_ignores = true
no_implicit_optional = true
exclude = ["tests/", "dashboard/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
